--- a/wp-content/themes/ahi/layouts/portfolio-page.css
+++ b/wp-content/themes/ahi/layouts/portfolio-page.css
@@ -5,9 +5,6 @@ Layout: Portfolio-Page
 
 /* add padding to image for medium screens */
 @media screen and (min-width: 901px){
-	article {
-		padding: 0 2rem 0 0;
-	}
 	.single-post-thumbnail {
 		float: left;
 		padding: 2rem 2rem 0 2rem;
